--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,11 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true 
+  - pymdownx.tabbed:
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
+
 
 extra_javascript:
   - javascripts/mathjax.js
