--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,10 @@ theme:
         icon: material/toggle-switch
         name: 切换至日间模式
       accent: lime
+  icon:
+    admonition:
+      <type>: <icon> 
+
 
 extra:
   social:
